jobs/2026-05-14__10-20-46/custom_error_handling_404__QGJmtmg/verifier/test-stdout.txt
downloading uv 0.9.7 x86_64-unknown-linux-gnu
no checksums to verify
installing to /root/.local/bin
  uv
  uvx
everything's installed!

To add $HOME/.local/bin to your PATH, either restart your shell or run:

    source $HOME/.local/bin/env (sh, bash, zsh)
    source $HOME/.local/bin/env.fish (fish)
Downloading pygments (1.2MiB)
 Downloading pygments
Installed 7 packages in 89ms
============================= test session starts ==============================
platform linux -- Python 3.12.3, pytest-8.4.1, pluggy-1.6.0
rootdir: /tests
plugins: json-ctrf-0.3.5
collected 0 items / 1 error

==================================== ERRORS ====================================
_____________________ ERROR collecting test_final_state.py _____________________
root/.cache/uv/archive-v0/K0FlQ8d16c5vnKOd3W1eH/lib/python3.12/site-packages/_pytest/python.py:498: in importtestmodule
    mod = import_path(
root/.cache/uv/archive-v0/K0FlQ8d16c5vnKOd3W1eH/lib/python3.12/site-packages/_pytest/pathlib.py:587: in import_path
    importlib.import_module(module_name)
usr/lib/python3.12/importlib/__init__.py:90: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
root/.cache/uv/archive-v0/K0FlQ8d16c5vnKOd3W1eH/lib/python3.12/site-packages/_pytest/assertion/rewrite.py:177: in exec_module
    source_stat, co = _rewrite_test(fn, self.config)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
root/.cache/uv/archive-v0/K0FlQ8d16c5vnKOd3W1eH/lib/python3.12/site-packages/_pytest/assertion/rewrite.py:357: in _rewrite_test
    tree = ast.parse(source, filename=strfn)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
usr/lib/python3.12/ast.py:52: in parse
    return compile(source, filename, mode, flags,
E     File "/tests/test_final_state.py", line 68
E       assert response_json.get("error") == "Custom 404 - Route not found", \\
E                                                                             ^
E   SyntaxError: unexpected character after line continuation character
=========================== short test summary info ============================
ERROR tests/test_final_state.py
!!!!!!!!!!!!!!!!!!!! Interrupted: 1 error during collection !!!!!!!!!!!!!!!!!!!!
=============================== 1 error in 0.19s ===============================
